Entities, Movie Repository and services, connection with MongoDB
Entities, Movie Repository and services, connection with MongoDB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.devtools.restart.enabled=true
 spring.main.banner-mode=off
 
 spring.data.mongodb.database=movie-api-db
+spring.data.mongodb.uri=mongodb+srv://rafaelswr:Rafael.1999.1.@clustermovieapi.xiqpyzi.mongodb.net
