--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.devtools.restart.enabled=true
 spring.main.banner-mode=off
 
-spring.data.mongodb.database=movie-api-db
-spring.data.mongodb.uri=mongodb+srv://rafaelswr:Rafael.1999.1.@clustermovieapi.xiqpyzi.mongodb.net
+spring.data.mongodb.database=${MONGO_DATABASE}
+spring.data.mongodb.uri=mongodb+srv://${MONGO_USER}:${MONGO_PASSWORD}@${MONGO_CLUSTER}
+
+
